tests/errors/statement_func.f90
program statement_func
    implicit none
    ! Error: x has no implicit type
    stmt_func(x) = x + 1
end program statement_func